Revert "[Alignment 2.0] changes after review"
This reverts commit f4f99815eaf0b364b24128bf50c576d7f2ce10b0.